Bug 53282 - macOS: Missing menu bar after closing fullscreen document (LO built-in version)
Summary: macOS: Missing menu bar after closing fullscreen document (LO built-in version)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: x86-64 (AMD64) macOS (All)
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0
Keywords:
: 63501 69930 (view as bug list)
Depends on:
Blocks: macOS-UI-polish Full-Screen-Mode
  Show dependency treegraph
 
Reported: 2012-08-09 09:18 UTC by James Helferty
Modified: 2018-06-27 12:54 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description James Helferty 2012-08-09 09:18:46 UTC
Problem description: 

Steps to reproduce:
1. Start LibreOffice, select option to create new text document
2. Switch to fullscreen (cmd-shift-J)
3. Close document (cmd-w)

Current behavior:

Window disappears, as does the OS X menu bar the top of the screen. There is no visible way to continue interacting with LibreOffice at this point.

Expected behavior:

LibreOffice switches out of fullscreen mode after fullscreen window closes. Menu bar shows up with LibreOffice and File entries in it.

Platform (if different from the browser): 
              
Browser: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_8_0) AppleWebKit/537.1 (KHTML, like Gecko) Chrome/21.0.1180.57 Safari/537.1
Comment 1 Alex Thurgood 2012-08-14 11:19:31 UTC
Confirming on Mac OSX 10.8 (Mountain Lion) that the Application menu bar disappears from the top of the screen. 

This does not completely prevent the user from interacting with LibreOffice, the application icon still apppears in the Dock and the application's own toolbar icons are still functional, but it is a problem nonetheless, e.g. there is no longer any obvious way to access the extension manager or many of the functions that are only available via the menu system.


Alex
Comment 2 Alex Thurgood 2012-08-14 11:22:58 UTC
I have noticed that the problem occurs with any document type that is created subsequent to the first initial creation, full screen setting then closing of that document.


This might be a duplicate of a previously reported problem, I will check.

Alex
Comment 3 Alex Thurgood 2012-08-14 11:33:23 UTC
It is interesting to note that the Dock also disappears from view. In fact, both the Dock and Application Menu are still present, but hidden. I accidentally and briefly managed to get the Application menu to appear again for a few seconds, then it promptly disappeared.

@Thorsten : one for you ?

Alex
Comment 4 Alex Thurgood 2012-08-14 11:37:56 UTC
Related in any way to Tor's attempts to get fullscreen support working ?

https://bugs.freedesktop.org/show_bug.cgi?id=39983


Alex
Comment 5 Alex Thurgood 2012-10-22 10:41:51 UTC
@Tor, Thorsten : any idea ?


Alex
Comment 6 Thorsten Behrens (allotropia) 2012-10-26 20:03:59 UTC
(In reply to comment #5)
> @Tor, Thorsten : any idea ?
> 
Entirely possible. So this is 10.8-only?
Comment 7 Don't use this account, use tml@iki.fi 2012-10-27 18:52:26 UTC
My patches to attempt to support "real" (in the sense of Mac OS X 10.7 and later) full-screen mode are not included in the code-base, so not related.
Comment 8 Thorsten Behrens (allotropia) 2013-02-20 09:08:16 UTC
Unfortunately cannot commit time to this currently, thus freeing the bug for other takers.
Comment 9 Jorendc 2013-04-13 16:19:44 UTC
*** Bug 63501 has been marked as a duplicate of this bug. ***
Comment 10 Thomas van der Meulen [retired] 2013-09-29 15:07:59 UTC
*** Bug 69930 has been marked as a duplicate of this bug. ***
Comment 11 Erkan 2013-12-08 18:03:54 UTC
LO 4.2 has problem too )-:
Comment 12 Jorendc 2013-12-08 18:05:38 UTC
Looks fixed to me.

Tested using Mac OSX 10.9 with LibreOffice Version: 4.2.0.0.beta2
Build ID: 1a27be92e320f97c20d581a69ef1c8b99ea9885d

Please verify with this version (http://www.libreoffice.org/download/pre-releases/) and mark as VERIFIED FIXED

Probably fixed by commit: http://cgit.freedesktop.org/libreoffice/core/commit/?id=986644335c3f9e99ec3c6bebc0b75cca0acdf79b
Comment 13 Jorendc 2013-12-08 18:07:34 UTC
(In reply to comment #11)
> LO 4.2 has problem too )-:

No, this is a different issue :). Please read the Description of this bug (for steps). The problem with grey-background is when you use the full-screen feature of Mac OSX (click at full-screen button at top right corner) (not from LibreOffice by going to cmd-shift-J).
Comment 14 Jorendc 2013-12-08 18:09:39 UTC
Ow dangit, my bad. Still reproducible, even with this full-screen option. Sorry for the noise
Comment 15 tmacalp 2014-01-08 22:31:46 UTC Comment hidden (off-topic)
Comment 16 tmacalp 2014-01-08 22:58:28 UTC Comment hidden (off-topic)
Comment 17 Alex Thurgood 2014-10-15 13:59:10 UTC
FWIW, the dock also disappears until you click on the bottom of the screen.

Still present in master Version: 4.4.0.0.alpha0+
Build ID: 7dc6c9af4ba313f054331f5130470d83d875bc16
Comment 18 Alex Thurgood 2014-10-15 14:01:17 UTC
(In reply to Alex Thurgood from comment #17)
> FWIW, the dock also disappears until you click on the bottom of the screen.
> 
> Still present in master Version: 4.4.0.0.alpha0+
> Build ID: 7dc6c9af4ba313f054331f5130470d83d875bc16

Sigh, repeating myself as per comment 3, sorry
Comment 19 Alex Thurgood 2015-10-12 10:15:53 UTC
Still present in 

Version: 5.0.2.2
Build ID: 37b43f919e4de5eeaca9b9755ed688758a8251fe
Locale : fr-FR (fr.UTF-8)

OSX 10.11
Comment 20 Stéphane Aulery 2016-03-02 12:54:50 UTC Comment hidden (off-topic)
Comment 21 ace_dent 2016-05-10 11:50:01 UTC
Tested with: Mac OS X El Capitan 10.11.4 (15E2066) with LibreOffice Version: 5.1.2.2
Build ID: d3bf12ecb743fc0d20e0be0c58ca359301eb705f
CPU Threads: 4; OS Version: Mac OS X 10.11.4; UI Render: default.

It seems using the native OSX full-screen behaviour (which now puts the zoomed in window in it's own space), is broken. The central issue is how LO handles Spaces on OSX.

Workaround: Double click on the window's title bar to maximise the window (like 'full screen' in earlier OSX versions).

Related, possibly duplicated, issues ~ 
Missing menu bar: #53282, #76476, #96134, #97402, #97709.
Extra blank screen: (black- was grey) #72490, #83378, #96134.
General: #85259, #95362.
Comment 22 How can I remove my account? 2016-11-14 13:27:14 UTC
It has been known for long that the attempt to support real macOS full-screen mode in LO is broken. I don't remember why it has not been removed. Probably because of the unsurprising "no, you must fix it ASAP instead" comments from the peanut gallery?
Comment 23 QA Administrators 2017-11-15 09:15:16 UTC Comment hidden (obsolete)
Comment 24 eisa01 2018-04-02 13:04:23 UTC
Still present, and this issue was also present in 3.3, so inherited

Comment #22 raises a valid point: macOS has native full screen functionality as well, it may be worth working on that instead of the LO built in functionality? Having two options is just confusing to users

Microsoft Office uses the native macOS full screen capability for their full screen menu option. I assume they had similar built in functionality before macOS introduced the native functionality.

Version: 6.1.0.0.alpha0+
Build ID: a488c7ad2763b944713997911c1ddb0315d8c93f
CPU threads: 2; OS: Mac OS X 10.12.6; UI render: default; 
TinderBox: MacOSX-x86_64@49-TDF, Branch:master, Time: 2018-03-26_00:38:29
Locale: en-US (en_US.UTF-8); Calc: group
Comment 25 How can I remove my account? 2018-06-27 09:26:15 UTC
Note that LibreOffice (master and 6.1 branches) now oesn't participate in the system full-screen mode at all. But this problem still is present, so it wasn't related to the *system* full-screen mode as such, but to LibreOffice's way to hide the menu bar in its own full-screen mode, or something.
Comment 26 How can I remove my account? 2018-06-27 09:33:45 UTC
I think it would be acceptable to just make the LibreOffice's own full-screen mode (which is not related to the system full-screen mode) *not* hide the menu bar at all, and thus work around this issue. But possibly that will then break slide shows in Impress, as they likely use the same LO functionality to hide the menu bar.
Comment 27 How can I remove my account? 2018-06-27 11:09:40 UTC
Suggested fix at https://gerrit.libreoffice.org/#/c/56524/ . (I did not have to do what I suggested in the previous comment.)
Comment 28 Commit Notification 2018-06-27 12:53:05 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=387f00311a1b2d12d16ae5731347cdc4328afa4a

tdf#53282: Leave (our own) full-screen mode when the AquaSalFrame is dying

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.