tdf#53282: Leave (our own) full-screen mode when the AquaSalFrame is dying

Change-Id: I85243dff96b9090de0fd55564b44abb6142d9ac2
Reviewed-on: https://gerrit.libreoffice.org/56524
Tested-by: Jenkins
Reviewed-by: Tor Lillqvist <tml@collabora.com>